modules/gdscript/tests/scripts/parser/errors/annotation_experimental.gd
# This annotation should be used within a documentation comment instead:
# ## @experimental: Reason here.

@experimental("This function isn't implemented yet.")
func say_hello():
    pass
